=== 4.41.0 (2016-12-01)

* Add Dataset#with_mssql_unicode_strings on Microsoft SQL Server, returning a clone with mssql_unicode_strings set (jeremyevans)

* Add Dataset#with_identifier_output_method, returning a clone with identifier_output_method set (jeremyevans)

* Add Dataset#with_identifier_input_method, returning a clone with identifier_input_method set (jeremyevans)

* Add Dataset#with_quote_identifiers, returning a clone with quote_identifiers set (jeremyevans)

* Add Dataset#with_extend, returning a clone extended with given modules (jeremyevans)

* Add Dataset#with_row_proc, returning a clone with row_proc set (jeremyevans)

* Support use of SQL::AliasedExpressions as Model#to_json :include option keys in the json_serializer plugin (sensadrome) (#1269)

* Major improvements to type conversion in the ado adapter (vais, jeremyevans) (#1265)

* Avoid memory leak in ado adapter by closing result sets after yielding them (vais, jeremyevans) (#1259)

* Fix hook_class_methods plugin handling of commit hooks (jeremyevans)

* Make association dataset method correctly handle cases where key fields are nil (jeremyevans)

* Handle pure java exceptions that don't support message= when reraising the exception in the jdbc adapter (jeremyevans)

* Add support for :offset_strategy Database option on DB2, with :limit_offset and :offset_fetch values, to disable OFFSET emulation (#1254) (jeremyevans)

* Remove deprecated support for using Bignum class as a generic type (jeremyevans)

=== 4.40.0 (2016-10-28)

* Make column_select plugin not raise an exception if the model's table does not exist (jeremyevans)

* Make dataset_associations plugin correctly handle (many|one)_through_many associations with single join table (jeremyevans) (#1253)

* Add s extension, with adds Sequel::S module that includes private #S method for calling Sequel.expr, including use as refinement (jeremyevans)
